--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,31 @@
     height: 50px;
     width: 50px;
 }
+
+.member-name{
+    font-family: Arial; 
+    color:rgb(39,39,39); 
+    font-size:35px; 
+    margin-bottom: 15px;
+    margin-top: 5px;
+    font-weight: 100;
+    font-weight: lighter;
+}
+
+.member-title{
+    font-family: Arial; 
+    color:rgb(67,67,67); 
+    font-size:25px; 
+    font-weight: 1000;
+    display: inline; 
+}
+
+.member-bio{
+
+    font-family: Arial; 
+    color:rgb(67,67,67); 
+    font-size:18px; 
+    margin-bottom: 5px;
+
+    
+}
